--- a/css/index.css
+++ b/css/index.css
@@ -140,8 +140,14 @@ table {
   padding-left: 5%;
 }
 .container {
-  max-width: 80%;
+  max-width: 1000px;
   margin: 10%;
+}
+@media (max-width: 500px) {
+  .container {
+    width: 80%;
+    margin: 5%;
+  }
 }
 .container nav {
   width: 50%;
@@ -150,15 +156,38 @@ table {
   justify-content: space-between;
   margin-left: 50%;
 }
+@media (max-width: 500px) {
+  .container nav {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin: 0 auto;
+    border-right: 1px solid #8D9294;
+    border-left: 1px solid #8D9294;
+    border-bottom: 1px solid #8D9294;
+  }
+}
 .container a {
   text-decoration: none;
   color: black;
+}
+@media (max-width: 500px) {
+  .container a {
+    border-top: 1px solid #8D9294;
+    width: 100%;
+    text-align: center;
+  }
 }
 .title {
   display: flex;
   flex-direction: column;
   width: 100%;
   background-color: #DFDFDF;
+}
+@media (max-width: 500px) {
+  .title {
+    width: 100%;
+  }
 }
 .title .line {
   margin-top: 2%;
@@ -168,27 +197,49 @@ table {
   border: 0.5px solid black;
 }
 .title .top {
-  max-width: 80%;
   display: flex;
   flex-direction: column;
   width: 100%;
   margin-left: 2%;
 }
+@media (max-width: 500px) {
+  .title .top {
+    width: 100%;
+  }
+}
 .title .top h1 {
   font-size: 30pt;
+}
+@media (max-width: 500px) {
+  .title .top h1 {
+    font-size: 16pt;
+  }
 }
 .title .top h4 {
   margin-top: 2%;
   font-size: 12pt;
 }
+@media (max-width: 500px) {
+  .title .top h4 {
+    font-size: 10pt;
+  }
+}
 .title .top .me {
   margin-top: 5%;
   width: 20%;
+}
+@media (max-width: 500px) {
+  .title .top .me {
+    width: 50%;
+    margin-left: 25%;
+  }
 }
 .title .bot {
   margin-left: 2%;
 }
 .title .bot p {
+  display: flex;
+  flex-wrap: nowrap;
   width: 15%;
   border-radius: 5px;
   margin-top: 1%;
@@ -197,7 +248,15 @@ table {
   padding-left: 2%;
   padding-top: 1%;
   padding-bottom: 1%;
+  text-align: center;
   background-color: #8D9294;
+}
+@media (max-width: 500px) {
+  .title .bot p {
+    width: 25%;
+    font-size: 8pt;
+    text-align: center;
+  }
 }
 .mid {
   width: 100%;
@@ -205,13 +264,22 @@ table {
   margin-top: 5%;
 }
 .mid .bio {
-  width: 45%;
-  margin-right: 5%;
+  width: 60%;
+  margin-right: 0%;
+}
+.mid .bio h2 {
+  font-weight: bold;
+  font-size: 14;
+  margin-bottom: 4%;
+}
+.mid .bio p {
+  font-size: 8pt;
+  width: 85%;
 }
 .mid .qualities {
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: 40%;
 }
 .mid .qualities h4 {
   margin-bottom: 3%;
@@ -261,9 +329,9 @@ footer {
   display: flex;
   flex-direction: column;
   background-color: #8D9294;
-  padding-bottom: 7%;
+  padding-bottom: 4%;
   align-items: center;
-  padding-top: 5%;
+  padding-top: 2%;
   color: white;
   margin-top: 5%;
 }
