--- a/less/index.less
+++ b/less/index.less
@@ -65,11 +65,12 @@ table {
 	
 }
 .container{
-	max-width: 1000px;
-	margin: 10%;
+	max-width: 800px;
+	width: 80%;
+	margin: 0 auto;
 	@media (max-width: 500px){
 		width: 80%;
-		margin: 5%;
+		margin: 0 auto;
 		
 	}
 	nav{
@@ -97,6 +98,14 @@ table {
 		}
 		text-decoration: none;
 		color: black;
+	}
+	a:hover{
+		background-color: @darkprofgray;
+		color: white;
+		@media(max-width: 500px){
+			color: @darkprofgray;
+			background-color: white;
+		}
 	}	
 }
 
@@ -125,7 +134,8 @@ table {
 			width: 100%;
 		}
 		h1{
-			font-size: 30pt;
+			width: 95%;
+			font-size: 200%;
 			@media(max-width: 500px){
 				font-size: 16pt;
 			}
@@ -151,17 +161,23 @@ table {
 		margin-left: 2%;
 		p{
 			display: flex;
-			flex-wrap: nowrap;
-			width: 15%;
+			flex-direction: column;
+			font-size: 90%;			
+			width: 22%;
 			border-radius: 5px;
 			margin-top: 1%;
 			margin-bottom: 10%;
 			color: white;
-			padding-left: 2%;
 			padding-top: 1%;
 			padding-bottom: 1%;
 			text-align: center;
 			background-color: @darkprofgray;
+			a{
+				color: white;
+			}
+			a:hover{
+				color: black;
+			}
 			@media(max-width: 500px){
 				width: 25%;
 				font-size: 8pt;
@@ -175,25 +191,48 @@ table {
 	width:100%;
 	display: flex;
 	margin-top: 5%;
+	@media(max-width:500px){
+		width: 100%;
+		display: flex;
+		flex-direction: column;
+	}
 	.bio{
 		width: 60%;
-		margin-right: 0%;
+		
+		@media(max-width:500px){
+			width: 100%;
+			margin-bottom: 5%;
+		}
 		h2{
+			
 			font-weight:bold;
 			font-size: 14;
 			margin-bottom: 4%;
 		}
 		p{
-			font-size: 8pt;
+			font-size: 10pt;
 			width: 85%;
+			@media(max-width: 500px){
+				font-size: 12pt;
+			}
 		}
 	}
 	.qualities{
 		display:flex;
 		flex-direction: column;
 		width: 40%;
+		@media(max-width: 500px){
+			width: 100%;
+			border-top: 1px solid @darkprofgray;
+			padding-top: 2%;
+			border-bottom: 1px solid @darkprofgray;
+			padding-bottom: 5%;
+		}
 		h4{
 			margin-bottom: 3%;
+			@media(max-width: 500px){
+				margin-bottom: 5%;
+			}
 		}
 		ul{
 			display:flex;
